--- a/pages/scripts/spawn.mdx
+++ b/pages/scripts/spawn.mdx
@@ -24,6 +24,131 @@ import { Tabs, Callout, Steps, Cards } from 'nextra/components'
     If you follow this guide completely, you will install the **hdstore-spawn** script without any problems.
 </Callout>
 
+<Tabs items={['qb', 'qbox', 'esx']}>
+    <Tabs.Tab>
+    ## qb-multicharacter
+    
+    ```lua filename="qb-multicharacter/server/main.lua" copy showLineNumbers
+    RegisterNetEvent('qb-multicharacter:server:loadUserData', function(cData)
+        local src = source
+        if QBCore.Player.Login(src, cData.citizenid) then
+            repeat
+                Wait(10)
+            until hasDonePreloading[src]
+            print('^2[qb-core]^7 '..GetPlayerName(src)..' (Citizen ID: '..cData.citizenid..') has successfully loaded!')
+            QBCore.Commands.Refresh(src)
+            loadHouseData(src)
+            if Config.SkipSelection then
+                local coords = json.decode(cData.position)
+                TriggerClientEvent('qb-multicharacter:client:spawnLastLocation', src, coords, cData)
+            else
+                if GetResourceState('qb-apartments') == 'started' then
+                    TriggerClientEvent('apartments:client:setupSpawnUI', src, cData)
+                else
+                    TriggerClientEvent('hdstore-spawn:client:openUI', src)
+                end
+            end
+            TriggerEvent("qb-log:server:CreateLog", "joinleave", "Loaded", "green", "**".. GetPlayerName(src) .. "** (<@"..(QBCore.Functions.GetIdentifier(src, 'discord'):gsub("discord:", "") or "unknown").."> |  ||"  ..(QBCore.Functions.GetIdentifier(src, 'ip') or 'undefined') ..  "|| | " ..(QBCore.Functions.GetIdentifier(src, 'license') or 'undefined') .." | " ..cData.citizenid.." | "..src..") loaded..")
+        end
+    end)
+    ```
+    </Tabs.Tab>
+    <Tabs.Tab>
+    ## qbx-multicharacter
+    
+    ```lua filename="qbx-multicharacter/server/main.lua" copy showLineNumbers
+    RegisterNetEvent('qb-multicharacter:server:loadUserData', function(cData)
+        local src = source
+        if QBCore.Player.Login(src, cData.citizenid) then
+            repeat
+                Wait(10)
+            until hasDonePreloading[src]
+            print('^2[qb-core]^7 '..GetPlayerName(src)..' (Citizen ID: '..cData.citizenid..') has successfully loaded!')
+            QBCore.Commands.Refresh(src)
+            loadHouseData(src)
+            if Config.SkipSelection then
+                local coords = json.decode(cData.position)
+                TriggerClientEvent('qb-multicharacter:client:spawnLastLocation', src, coords, cData)
+            else
+                if GetResourceState('qbx-apartments') == 'started' then
+                    TriggerClientEvent('apartments:client:setupSpawnUI', src, cData)
+                else
+                    TriggerClientEvent('hdstore-spawn:client:openUI', src)
+                end
+            end
+            TriggerEvent("qb-log:server:CreateLog", "joinleave", "Loaded", "green", "**".. GetPlayerName(src) .. "** (<@"..(QBCore.Functions.GetIdentifier(src, 'discord'):gsub("discord:", "") or "unknown").."> |  ||"  ..(QBCore.Functions.GetIdentifier(src, 'ip') or 'undefined') ..  "|| | " ..(QBCore.Functions.GetIdentifier(src, 'license') or 'undefined') .." | " ..cData.citizenid.." | "..src..") loaded..")
+        end
+    end)
+    ```
+    </Tabs.Tab>
+    <Tabs.Tab>
+    ## esx_multicharacter
+    
+    ```lua filename="esx_multicharacter/client/main.lua" copy showLineNumbers
+    RegisterNetEvent("esx:playerLoaded")
+    AddEventHandler("esx:playerLoaded", function(playerData, isNew, skin)
+        local spawn = playerData.coords or Config.Spawn
+        if isNew or not skin or #skin == 1 then
+            local finished = false
+            skin = Config.Default[playerData.sex]
+            skin.sex = playerData.sex == "m" and 0 or 1
+            local model = skin.sex == 0 and mp_m_freemode_01 or mp_f_freemode_01
+            RequestModel(model)
+            while not HasModelLoaded(model) do
+                RequestModel(model)
+                Wait(0)
+            end
+            SetPlayerModel(PlayerId(), model)
+            SetModelAsNoLongerNeeded(model)
+            TriggerEvent("skinchanger:loadSkin", skin, function()
+                local playerPed = PlayerPedId()
+                SetPedAoBlobRendering(playerPed, true)
+                ResetEntityAlpha(playerPed)
+                TriggerEvent("esx_skin:openSaveableMenu", function()
+                    finished = true
+                end, function()
+                    finished = true
+                end)
+            end)
+            repeat
+                Wait(200)
+            until finished
+        end
+
+        DoScreenFadeOut(750)
+        Wait(750)
+
+        SetCamActive(cam, false)
+        RenderScriptCams(false, false, 0, true, true)
+        cam = nil
+        local playerPed = PlayerPedId()
+        FreezeEntityPosition(playerPed, true)
+        SetEntityCoordsNoOffset(playerPed, spawn.x, spawn.y, spawn.z, false, false, false, true)
+        SetEntityHeading(playerPed, spawn.heading)
+
+        exports['hdstore-spawn']:OpenSpawn(spawn)
+
+        if not isNew then
+            TriggerEvent("skinchanger:loadSkin", skin or Characters[spawned].skin)
+        end
+        Wait(500)
+
+        DoScreenFadeIn(750)
+        Wait(750)
+
+        repeat
+            Wait(200)
+        until not IsScreenFadedOut()
+        TriggerServerEvent("esx:onPlayerSpawn")
+        TriggerEvent("esx:onPlayerSpawn")
+        TriggerEvent("playerSpawned")
+        TriggerEvent("esx:restoreLoadout")
+        Characters, hidePlayers = {}, false
+    end)
+    ```
+    </Tabs.Tab>
+</Tabs>
+
 <Steps>
     ### Locales
 
@@ -136,5 +261,15 @@ import { Tabs, Callout, Steps, Cards } from 'nextra/components'
         Time = 23, -- 0-23
         Weather = 'THUNDER' -- CLEAR, EXTRASUNNY, CLOUDS, OVERCAST, RAIN, CLEARING , THUNDER, SMOG, FOGGY, XMAS , SNOWLIGHT, BLIZZARD
     }
+    ```
+
+    ### Event and Exports
+
+
+    ```lua copy showLineNumbers
+    TriggerClientEvent('qb-spawn:client:openUI')
+    TriggerClientEvent('hdstore-spawn:client:openUI')
+
+    exports['hdstore-spawn']:OpenSpawn()
     ```
 </Steps>
