--- a/pages/information/get-steam-apikey.mdx
+++ b/pages/information/get-steam-apikey.mdx
@@ -1,3 +1,7 @@
+---
+title: Get Steam API Key
+---
+
 import { Steps } from 'nextra/components'
 
 Steam Web Api key scripts are used to access the player's steam information. Sensitive data such as account password email is inaccessible, so don't worry about it.
