--- a/pages/information/how-to-download-scripts.mdx
+++ b/pages/information/how-to-download-scripts.mdx
@@ -1,3 +1,7 @@
+---
+title: How to Download Scripts?
+---
+
 import { Steps, Callout } from 'nextra/components'
 
 To download or view the scripts you have purchased, you need to log in to <a href="https://keymaster.fivem.net/asset-grants" style={{ color: '#008ae6' }}>keymaster.fivem.net</a> with your <a href="https://cfx.re/" style={{ color: '#008ae6' }}>cfx.re</a> account.
