--- a/pages/scripts/playtime.mdx
+++ b/pages/scripts/playtime.mdx
@@ -1,3 +1,7 @@
+---
+title: Playtime
+---
+
 import { Tabs, Callout, Steps, Cards } from 'nextra/components'
 
 # Installation Guide
@@ -235,7 +239,7 @@ import { Tabs, Callout, Steps, Cards } from 'nextra/components'
         <img src="https://r2.fivemanage.com/VX91vF0f30DDYFZbWik6j/images/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202024-10-18%20150626.png" width="100%"/>
 
         Add the command `addcoin {sid} {transaction} {packageId}` and save and that's it!
-        
+
         <img src="https://r2.fivemanage.com/VX91vF0f30DDYFZbWik6j/images/Ekran%20g%C3%B6r%C3%BCnt%C3%BCs%C3%BC%202024-10-18%20150705.png" width="100%"/>
     </Tabs.Tab>
 </Tabs>
