--- a/pages/information/find-transaction-id.mdx
+++ b/pages/information/find-transaction-id.mdx
@@ -1,3 +1,7 @@
+---
+title: Find Transaction ID
+---
+
 import { Steps, Callout } from 'nextra/components'
 
 If you have lost the transaction id, follow these steps.
